<resources>
    <string name="app_name">Jejak PKL SKADEL</string>
    <string name="desc_logo_txt">Logo Aplikasi</string>
    <string name="welcome_auth">Welcome to Jejak PKL</string>
    <string name="et_email">Email Address</string>
    <string name="et_pass">Password</string>
    <string name="login_desc">Dokumentasikan dan Unggah Pengalaman Magangmu secara Berkala</string>
    <string name="et_name">Full Name</string>
    <string name="title_complete_profile">Lengkapi profil kamu dulu</string>
    <string name="subtitle_complete_profile">Langkah 2 dari 3</string>
    <string name="content_description_profile">Default Profile</string>
    <string name="content_description_editIcon">Edit Icon</string>
    <string name="hint_name_complete_profile">Nama Lengkap Kamu</string>
    <string name="hint_class_choice">Pilih Kelas kamu</string>
    <string name="hint_major_choice">Jurusan kamu</string>
    <string name="hint_industry_choice">Pilih Industri kamu</string>
    <string name="hint_phone_number">Nomor Telepon atau WA</string>
    <string name="hint_school_choice">Pilih sekolah kamu</string>
    <string name="btn_save_text">simpan</string>
    <string name="btn_google_signIn_text">Log in with Google</string>
    <string name="tv_or">OR</string>
    <string name="btn_login_text">login</string>
    <string name="tv_to_register">Belum punya akun? Register</string>
    <string name="title_register">Daftar Jejak PKL</string>
    <string name="btn_register_text">daftar</string>
    <string name="tv_to_login">Sudah punya akun? Login</string>
    <string name="title_home">Beranda</string>
    <string name="title_upload">Upload</string>
    <string name="title_history">Riwayat</string>
    <string name="title_profile">Pengaturan</string>
    <string name="tv_student_greeting">Hi, Student Name!</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="upload_icon">Upload Icon</string>
    <string name="upload_documentation">Upload Documentation</string>
    <string name="history_view">History View</string>
    <string name="view_upload_history">View Upload History</string>
    <string name="student_profile">Student Profile</string>
    <string name="export_doc">Export Doc</string>
    <string name="export_document">Export Document</string>
    <string name="title_review_doc">Document Review Status</string>
    <string name="logout">Logout</string>
    <string name="tile_document">Daily Log - Need to Repair</string>
    <string name="date_review">Reviewed: 2024-07-06</string>
    <string name="hint_teachers_choice">Guru Pembimbing Kamu</string>
    <string name="content_description_preview">Preview Image</string>
    <string name="title_upload_page">Upload Dokumentasi</string>
    <string name="text_form_title_dokumentation">Judul Dokumentasi</string>
    <string name="title_form_description_documentation">Deskripsi Kegiatan</string>
    <string name="btn_text_upload">Upload</string>
</resources>